--- a/readme
+++ b/readme
@@ -32,7 +32,24 @@
 	cat /etc/hosts -> 172.17.0.2      mysql_ip 48ed57225592 some-mysql
 	ping 172.17.0.2
 	
+	
+## Partie 4 : Mise en place de wordpress avec docker-compose 
+
+	Command: docker-compose up -d
+			 docker-compose down
+
 	Nous pouvons inspecter l'addresse ip d'un conteneur comme suit:
 	docker ps
 	docker inspect container-id -> "IPAddress": "172.17.0.2"
+	
+## Partie 5 : Connecting ecom-catalogs avec mysql
+    Création du fichier docker-compose.yml
+    mvn clean package docker:build
+    docker-compose up -d
+    docker-compose down
+    
+    
+    
+    
+    
 	
