--- a/readme
+++ b/readme
@@ -53,4 +53,29 @@
 	voir: docker-compose 
     
     
+## Partie 6 : docker-compose global du projet
+	docker ps  -a
+	docker stop $(docker ps -a -q)
+	docker rm $(docker ps -a -q)
+	docker-compose up -d
+    docker-compose down
+	
+	Test : http://localhost:8180/categories
+	       http://localhost:8280/reviews
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	  
 	
